--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "sample text"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "logic2-automation>=1.0.7",
+    "mcp[cli]>=1.11.0",
     "ruff>=0.12.3",
 ]
