--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Set up Python
         run: uv python install
 
+      - name: Create and activate virtualenv
+        run: uv venv && source .venv/bin/activate
+
       - name: Install dependencies
         run: uv pip install -e .[dev]
 
