--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "contextwire"
 version = "0.0.1"
-description = "sample text"
+description = "A framework for automating hardware lab tools, featuring a Model Context Protocol (MCP) server for agentic AI interaction."
 readme = "README.md"
 requires-python = ">=3.12"
 authors = [{ name = "Kristaps Karlsons", email = "kristaps.karlsons@gmail.com" }]
-keywords = ["mcp", "llm", "chatbot", "cli", "embedded", "arm"]
+keywords = ["mcp", "llm", "agentic-ai", "fastapi", "rest", "websocket", "hardware", "automation", "hil", "embedded", "arm", "cli", "instrumentation", "saleae", "bus-pirate", "lxi", "sigrok"]
 
 license = { text = "Apache License (2.0)" }
 
@@ -14,6 +14,8 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
+    "Topic :: System :: Hardware",
+    "Topic :: Scientific/Engineering",
 ]
 
 dependencies = [
