--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,11 @@ dev = [
     "ruff",
 ]
 
+[dependency-groups]
+dev = [
+    "twine>=6.1.0",
+]
+
 [tool.pytest.ini_options]
 minversion = "8.0"
 addopts = "-ra -q"
