Add FastAPI websocket server with echo endpoint, add FastAPI/FastApiMCP dependencies and tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ classifiers = [
 ]
 
 dependencies = [
+    "fastapi-mcp>=0.3.7",
+    "fastapi[standard]>=0.116.1",
     "logic2-automation>=1.0.7",
     "mcp[cli]>=1.11.0",
 ]
@@ -33,6 +35,7 @@ dev = [
     "pytest-mock",
     "pytest-cov",
     "ruff",
+    "pytest-asyncio",
 ]
 
 [dependency-groups]
@@ -45,6 +48,9 @@ minversion = "8.0"
 addopts = "-ra -q"
 testpaths = [
     "tests"
+]
+filterwarnings = [
+    "ignore::pydantic.PydanticDeprecatedSince211"
 ]
 
 [tool.ruff.lint]
